Update presto.sh